--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@ become part of one big Gamecock Family once they come to JSU.
 				<ul class="list-unstyled">
 					<li class="col-sm-6 md-margin-bottom-50">
 						<a href="eli.html" title="English Language Institute" class="thumbnail">
-							<img alt="" src="assets/img/main/img9.jpg" class="full-width img-responsive">
+							<img alt="" src="assets/img/index-img/JSU ELI.jpg" class="full-width img-responsive">
 						</a>
 						<div class="headline-left margin-bottom-10">
 						  <h3 class="headline-brd">English Language Institue</h3>
