--- a/eli.html
+++ b/eli.html
@@ -144,25 +144,25 @@
 													<div class="row">
 														<div class="col-sm-3 md-margin-bottom-30">
 															<div class="blog-grid">
-																<img class="img-responsive" src="assets/img/main/img1.jpg" alt="">
+																<img class="img-responsive" src="assets/img/index-img/JSU ELI.jpg" alt="">
 																<h3 class="blog-grid-title-sm"><a href="eli.html">English Language Institute</a></h3>
 															</div>
 														</div>
 														<div class="col-sm-3 md-margin-bottom-30">
 															<div class="blog-grid">
-																<img class="img-responsive" src="assets/img/main/img11.jpg" alt="">
+																<img class="img-responsive" src="assets/img/index-img/JSU International-House.jpg" alt="">
 																<h3 class="blog-grid-title-sm"><a href="ihop.html">International House Program</a></h3>
 															</div>
 														</div>
 														<div class="col-sm-3 md-margin-bottom-30">
 															<div class="blog-grid">
-																<img class="img-responsive" src="assets/img/main/img10.jpg" alt="">
+																<img class="img-responsive" src="assets/img/JSU Undergraduate.jpg" alt="">
 																<h3 class="blog-grid-title-sm"><a href="undergraduate.html">Undergraduate</a></h3>
 															</div>
 														</div>
 														<div class="col-sm-3 sm-margin-bottom-30">
 															<div class="blog-grid">
-																<img class="img-responsive" src="assets/img/main/img21.jpg" alt="">
+																<img class="img-responsive" src="assets/img/JSU Graduate.jpg" alt="">
 																<h3 class="blog-grid-title-sm"><a href="graduate.html">Graduate</a></h3>
 															</div>
 														</div>
