update website menu images

--- a/index.html
+++ b/index.html
@@ -156,13 +156,13 @@
 														</div>
 														<div class="col-sm-3 md-margin-bottom-30">
 															<div class="blog-grid">
-																<img class="img-responsive" src="assets/img/JSU Undergraduate.jpg" alt="">
+																<img class="img-responsive" src="assets/img/index-img/JSU Undergraduate.jpg" alt="">
 																<h3 class="blog-grid-title-sm"><a href="undergraduate.html">Undergraduate</a></h3>
 															</div>
 														</div>
 														<div class="col-sm-3 sm-margin-bottom-30">
 															<div class="blog-grid">
-																<img class="img-responsive" src="assets/img/JSU Graduate.jpg" alt="">
+																<img class="img-responsive" src="assets/img/index-img/JSU Graduate.jpg" alt="">
 																<h3 class="blog-grid-title-sm"><a href="graduate.html">Graduate</a></h3>
 															</div>
 														</div>
@@ -798,12 +798,11 @@ become part of one big Gamecock Family once they come to JSU.
 							<h2>Useful Links</h2>
 							<!-- Footer Lists -->
 							<ul class="footer-lists">
-								<li><i class="fa fa-angle-right"></i><a href="#">About</a></li>
+								<li><i class="fa fa-angle-right"></i><a href="#">About JSU</a></li>
 								<li><i class="fa fa-angle-right"></i><a href="#">ELI</a></li>
 								<li><i class="fa fa-angle-right"></i><a href="#">International House</a></li>
 								<li><i class="fa fa-angle-right"></i><a href="#">Undergraduate</a></li>
 								<li><i class="fa fa-angle-right"></i><a href="#">Graduate</a></li>
-								<li><i class="fa fa-angle-right"></i><a href="#">Themes</a></li>
 							</ul>
 							<!-- End Footer Lists -->
 						</div>
