--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@ at Jacksonville State University, takes pride in our belief that we are here to 
 each individual students with respect and care no matter where they come from. All of our students
 become part of one big Gamecock Family once they come to JSU.
 	I look forward to seeing each one of you.</p><br><p>Chandni Khadka,<br>Director International Programs<br>Jacksonville State University</p><br>
-						<button class="btn-u text-uppercase" type="button">Our Programs</button>
+						<a href="#Programs"><button class="btn-u text-uppercase" type="button">Our Programs</button></a>
 					</div>
 				</div><!--/end row-->
 			</div><!--/end container-->
@@ -580,6 +580,8 @@ become part of one big Gamecock Family once they come to JSU.
 					</div>
 				</div>
 			</div>
+			<a name="Programs"></a>
+
 			<div class="container content-sm">
 				<div class="headline-center margin-bottom-60">
 				  <h2>Our Progams</h2>
@@ -628,43 +630,6 @@ become part of one big Gamecock Family once they come to JSU.
 				<!-- End Portfolio Box -->
 			</div><!--/end container-->
 
-			<!-- Flat Background Block -->
-			<div class="flat-bg-block-v1 parallaxBg margin-bottom-60">
-				<div class="container">
-					<div class="row">
-						<div class="col-md-7 md-margin-bottom-60">
-							<div class="headline-left margin-bottom-20">
-								<h2 class="headline-brd">Unify is Fully Responsive</h2>
-								<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas moles</p>
-							</div><!--/end Headline Left-->
-
-							<div class="row">
-								<div class="col-sm-5">
-									<ul class="list-unstyled checked-list">
-										<li><i class="fa fa-check"></i> Donec id elit non mi porta gravida</li>
-										<li><i class="fa fa-check"></i> Corporate and Creative</li>
-										<li><i class="fa fa-check"></i> Responsive Bootstrap Template</li>
-										<li><i class="fa fa-check"></i> Corporate and Creative</li>
-									</ul>
-								</div>
-								<div class="col-sm-5 col-sm-offset-1">
-									<ul class="list-unstyled checked-list">
-										<li><i class="fa fa-check"></i> Donec id elit non mi porta gravida</li>
-										<li><i class="fa fa-check"></i> Corporate and Creative</li>
-										<li><i class="fa fa-check"></i> Responsive Bootstrap Template</li>
-										<li><i class="fa fa-check"></i> Corporate and Creative</li>
-									</ul>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-5">
-							<img alt="" src="assets/img/mockup/2.png" class="img-over img-responsive">
-						</div>
-					</div>
-				</div><!--/end container-->
-			</div>
-			<!-- End Flat Background Block -->
-
 			<!-- Flat Testimonials -->
 			<div class="flat-testimonials bg-image-v1 parallaxBg1 margin-bottom-60" style="background-position: 50% 241px;">
 				<div class="container">
@@ -702,64 +667,6 @@ become part of one big Gamecock Family once they come to JSU.
 				</div><!--/end container-->
 			</div>
 			<!-- End Flat Testimonials -->
-
-			<div class="container">
-				<div class="headline-center margin-bottom-60">
-					<h2>What We Provide</h2>
-					<p>Integer odio ligula, tincidunt id volutpat et, imperdiet eget mi. Quisque laoreet porttitor turpis sed <a href="#">fermentum</a>. Nullam sodales blandit nisi, tristique tempor nunc hendrerit at. Sed posuere mollis orci</p>
-				</div><!--/end Headline Center-->
-
-				<div class="row margin-bottom-40">
-					<div class="col-md-4">
-						<div class="content-boxes-v5 margin-bottom-30">
-							<i class="rounded-x icon-layers"></i>
-							<div class="overflow-h">
-								<h3 class="no-top-space">Responsive Layout</h3>
-								<p>Proin et augue vel nisi rhoncus tincidunt. Cras venenatis</p>
-							</div>
-						</div>
-						<div class="content-boxes-v5 md-margin-bottom-30">
-							<i class="rounded-x icon-settings"></i>
-							<div class="overflow-h">
-								<h3 class="no-top-space">Color Options</h3>
-								<p>Proin et augue vel nisi rhoncus tincidunt. Cras venenatis</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-4">
-						<div class="content-boxes-v5 margin-bottom-30">
-							<i class="rounded-x icon-earphones-alt "></i>
-							<div class="overflow-h">
-								<h3 class="no-top-space">Outstanding Support</h3>
-								<p>Proin et augue vel nisi rhoncus tincidunt. Cras venenatis</p>
-							</div>
-						</div>
-						<div class="content-boxes-v5 md-margin-bottom-30">
-							<i class="rounded-x icon-user "></i>
-							<div class="overflow-h">
-								<h3 class="no-top-space">User Friendly</h3>
-								<p>Proin et augue vel nisi rhoncus tincidunt. Cras venenatis</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-4">
-						<div class="content-boxes-v5 margin-bottom-30">
-							<i class="rounded-x icon-wrench"></i>
-							<div class="overflow-h">
-								<h3 class="no-top-space">Customizable Design</h3>
-								<p>Proin et augue vel nisi rhoncus tincidunt. Cras venenatis</p>
-							</div>
-						</div>
-						<div class="content-boxes-v5 md-margin-bottom-30">
-							<i class="rounded-x icon-star"></i>
-							<div class="overflow-h">
-								<h3 class="no-top-space">Free Updates</h3>
-								<p>Proin et augue vel nisi rhoncus tincidunt. Cras venenatis</p>
-							</div>
-						</div>
-					</div>
-				</div><!--/end row-->
-			</div><!--/end container-->
 		</div>
 		<!-- End Content Part -->
  
