--- a/ihop.html
+++ b/ihop.html
@@ -522,7 +522,7 @@ Apply									</a>
 		<div class="tab-content">
 								<div class="tab-pane fade in active" id="home-2">
 								<div class="heading margin-bottom-10">
-						<h2>Graduate Programs</h2></div>
+						<h2>International House</h2></div>
 								<p>If you have just completed a Bachelor’s degree program, or you are looking to advance in your career with higher degree, we offer close to 30 Graduate programs at Master’s, Post-Graduate specialist and PhD levels. Having an advanced degree will/may give you an opportunity to negotiate a better career option and higher financial reward.
 As per IIE open door report, close to 383,000 international students chose to study in the United States for their graduate degree. </p>
 <p>There are thousands of Institutions offering graduate programs within the United States. Thus, it is important that International students consider the Accreditation of the Graduate programs that they are looking for and Cost of attendance when selecting the University to pursue their graduate program. </p>
