--- a/ihop.html
+++ b/ihop.html
@@ -586,8 +586,8 @@ Apply									</a>
 									<a class="btn-more hover-effect" href="#">read more +</a>
 								</div>
 								<div class="caption">
-								  <h3><a class="hover-effect" href="#">John Smith</a></h3>
-								  <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, justo sit amet risus etiam porta sem.</p>
+								  <h3><a class="hover-effect" href="#">Mohammed Bouzouba</a></h3>
+								  <p>"Grateful to call JSU my home."</p>
 								</div>
 							</div>
 						</div>
@@ -600,8 +600,8 @@ Apply									</a>
 									<a class="btn-more hover-effect" href="#">read more +</a>
 								</div>
 								<div class="caption">
-								  <h3><a class="hover-effect" href="#">John Smith</a></h3>
-								  <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, justo sit amet risus etiam porta sem.</p>
+								  <h3><a class="hover-effect" href="#">Precious C. J. Mmegwa</a></h3>
+								  <p>“This is definitely the picture I had in mind of my dream University and surrounding”.</p>
 								</div>
 							</div>
 						</div>
@@ -614,8 +614,8 @@ Apply									</a>
 									<a class="btn-more hover-effect" href="#">read more +</a>
 								</div>
 								<div class="caption">
-									<h3><a class="hover-effect" href="#">Project Three</a></h3>
-									<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, justo sit amet risus etiam porta sem.</p>
+									<h3><a class="hover-effect" href="#">Missing Story</a></h3>
+									<p>No story</p>
 								</div>
 							</div>
 						</div>
