--- a/undergraduate.html
+++ b/undergraduate.html
@@ -805,7 +805,7 @@ Students in Associate Degree Program: Congratulations for achieving one of the m
 									<a class="btn-more hover-effect" href="#">read more +</a>
 								</div>
 								<div class="caption">
-								  <h3><a class="hover-effect" href="#">John Smith</a></h3>
+								  <h3><a class="hover-effect" href="#">No Name</a></h3>
 								  <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, justo sit amet risus etiam porta sem.</p>
 								</div>
 							</div>
