--- a/ihop.html
+++ b/ihop.html
@@ -614,8 +614,8 @@ Apply									</a>
 									<a class="btn-more hover-effect" href="#">read more +</a>
 								</div>
 								<div class="caption">
-									<h3><a class="hover-effect" href="#">Missing Story</a></h3>
-									<p>No story</p>
+									<h3><a class="hover-effect" href="#">Alban Hoxhallari</a></h3>
+									<p>Being a member of the International House has been so far an experience like no others.</p>
 								</div>
 							</div>
 						</div>
