--- a/eli.html
+++ b/eli.html
@@ -746,8 +746,8 @@ Apply									</a>
 									<a class="btn-more hover-effect" href="#">read more +</a>
 								</div>
 								<div class="caption">
-								  <h3><a class="hover-effect" href="#">John Smith</a></h3>
-								  <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, justo sit amet risus etiam porta sem.</p>
+								  <h3><a class="hover-effect" href="#">YueJiao Li</a></h3>
+								  <p>Teachers and staff in ELI helped me and walked with me through the toughest times.</p>
 								</div>
 							</div>
 						</div>
@@ -760,8 +760,8 @@ Apply									</a>
 									<a class="btn-more hover-effect" href="#">read more +</a>
 								</div>
 								<div class="caption">
-								  <h3><a class="hover-effect" href="#">John Smith</a></h3>
-								  <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, justo sit amet risus etiam porta sem.</p>
+								  <h3><a class="hover-effect" href="#">Ahmed Albloushi</a></h3>
+								  <p>After a few months of studying I could speak very well.</p>
 								</div>
 							</div>
 						</div>
@@ -774,8 +774,8 @@ Apply									</a>
 									<a class="btn-more hover-effect" href="#">read more +</a>
 								</div>
 								<div class="caption">
-									<h3><a class="hover-effect" href="#">Project Three</a></h3>
-									<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, justo sit amet risus etiam porta sem.</p>
+									<h3><a class="hover-effect" href="#">Irma</a></h3>
+									<p>Some of my favorite memories from my time at ELI are the field trips we too.</p>
 								</div>
 							</div>
 						</div>
