--- a/ihop.html
+++ b/ihop.html
@@ -547,7 +547,25 @@ Apply									</a>
 					<h2>Apply Now</h2></div>
 				<h3>International Students</h3>
 					<p>To be considered for participation in the International House, you must already have been accepted to JSU. Once you have received your JSU email and student identification number, please complete this application.</p>
-					<p>If you are granted one of the merit-based scholarships, your application to the International House will be considered. If your scholarship does not cover all of your expenses, you will have to show proof of financial support to cover the rest of your academic costs.</p>
+					<p>If you are granted one of the merit-based scholarships 
+					<a data-toggle="modal" data-target=".bs-example-modal-sm">Small modal</a>
+					<div class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
+					  <div class="modal-dialog modal-sm" role="document">
+						<div class="modal-content">
+						  ...
+						</div>
+					  </div>
+</div>, your application to the International House will be considered. If your scholarship does not cover all of your expenses, you will have to show proof of financial support to cover the rest of your academic costs.</p>
+				
+				<button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bs-example-modal-sm">Small modal</button>
+
+<div class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
+  <div class="modal-dialog modal-sm" role="document">
+    <div class="modal-content">
+      ...
+    </div>
+  </div>
+</div>
 					<p>An application to the International House consists of:</p>
 					<ul><li>1. Completed and signed application</li>
 						<li>2. Essay</li>
