--- a/undergraduate.html
+++ b/undergraduate.html
@@ -526,9 +526,8 @@ Apply									</a>
 								<div class="heading margin-bottom-10">
 						<h2>Undergraduate Programs</h2></div>
 								<p>More than one million students from around the world choose to come to the United States for their higher education. Degrees earned at accredited institutions in the United States are recognized worldwide and prep5are you to be a global citizen.</p>
-									<img alt="" class="pull-left lft-img-margin img-width-200" src="assets/img/main/img22.jpg"><p>We at Jacksonville State University recognize the need for our students to be global citizens to compete in the real world once they graduate. We therefore celebrate diversity and welcome students from all around the world.
-									</p>
-									<p>Take a look at our accreditations</p>
+								<img alt="" class="pull-left lft-img-margin img-width-200" src="assets/img/main/img22.jpg"><p>We at Jacksonville State University recognize the need for our students to be global citizens to compete in the real world once they graduate. We therefore celebrate diversity and welcome students from all around the world.</p>
+								<P><p>Take a look at our <a href="#profile-2" data-toggle="tab"> accreditation</a></p>
 		  </div>
 									
 									
