final touches on programs

--- a/eli.html
+++ b/eli.html
@@ -507,11 +507,11 @@ Apply									</a>
 <div class="row tab-v3">
 						<div class="col-sm-3">
 							<ul class="nav nav-pills nav-stacked">
-							  <li class="active"><a href="#home-2" data-toggle="tab"><em class="fa fa-home"></em> Introduction</a></li>
+							  	<li class="active"><a href="#home-2" data-toggle="tab"><em class="fa fa-home"></em> Introduction</a></li>
 								<li><a href="#whatIwillstudy-2" data-toggle="tab"><em class="icon-user"></em> What will I study?</a></li>
 								<li><a href="#EnglishRequirements-2" data-toggle="tab"><em class="fa fa-gear"></em> English Requirements</a></li>
 								<li><a href="#Tuition-and-requirements-2" data-toggle="tab"><em class="fa fa-gear"></em> Tuition and Fees</a></li>
-								<li><a href="#Important-Dates-2" data-toggle="tab"><i class ="fa fa-gear"></i> Important Dates</a></li>
+								<li><a href="#Important-Dates-2" data-toggle="tab"><em class ="fa fa-gear"></em> Important Dates</a></li>
 								<li><a href="#ApplyNow-2" data-toggle="tab"><em class="fa fa-gear"></em> Apply Now</a></li>
 							</ul>
 						</div>
@@ -520,7 +520,8 @@ Apply									</a>
 			<div class="tab-pane fade in active" id="home-2">
 				<div class="heading margin-bottom-10">
 				<h2>English Language Institute</h2></div>
-				<p>The English Language Institute will prepare you for successful university study. When you study English at ELI you become part of the university—your JSU student ID card gives you access to housing, dining, health services, sports and entertainment events.  At ELI, you will enjoy a college experience before you start college!</p>
+			  <img class="col-sm-8 col-md-6 col-lg-6 img-responsive margin-bottom-20" src="assets/img/programs/ELI01.jpg" alt="">
+			  <p>The English Language Institute will prepare you for successful university study. When you study English at ELI you become part of the university—your JSU student ID card gives you access to housing, dining, health services, sports and entertainment events.  At ELI, you will enjoy a college experience before you start college!</p>
 		 	 </div>
 		  <div class="tab-pane fade in" id="whatIwillstudy-2">
 				<div class="heading margin-bottom-10">
@@ -741,13 +742,13 @@ Apply									</a>
 							<div class="thumbnails thumbnail-style thumbnail-kenburn">
 								<div class="thumbnail-img">
 									<div class="overflow-hidden">
-										<img class="img-responsive" src="assets/img/main/img3.jpg" alt="" />
+										<img class="img-responsive" src="assets/img/testimonials/ELI-testimonial01.jpg" alt="" />
 									</div>
 									<a class="btn-more hover-effect" href="#">read more +</a>
 								</div>
 								<div class="caption">
 								  <h3><a class="hover-effect" href="#">YueJiao Li</a></h3>
-								  <p>Teachers and staff in ELI helped me and walked with me through the toughest times.</p>
+									<p><i>"Teachers and staff in ELI helped me and walked with me through the toughest times."</i></p>
 								</div>
 							</div>
 						</div>
@@ -755,13 +756,13 @@ Apply									</a>
 							<div class="thumbnails thumbnail-style thumbnail-kenburn">
 								<div class="thumbnail-img">
 									<div class="overflow-hidden">
-										<img class="img-responsive" src="assets/img/main/img4.jpg" alt="" />
+										<img class="img-responsive" src="assets/img/testimonials/ELI-testimonial02.jpg" alt="" />
 									</div>
 									<a class="btn-more hover-effect" href="#">read more +</a>
 								</div>
 								<div class="caption">
 								  <h3><a class="hover-effect" href="#">Ahmed Albloushi</a></h3>
-								  <p>After a few months of studying I could speak very well.</p>
+									<p><i>"After a few months of studying I could speak very well."</i></p>
 								</div>
 							</div>
 						</div>
@@ -769,13 +770,13 @@ Apply									</a>
 							<div class="thumbnails thumbnail-style thumbnail-kenburn">
 								<div class="thumbnail-img">
 									<div class="overflow-hidden">
-										<img class="img-responsive" src="assets/img/main/img1.jpg" alt="" />
+										<img class="img-responsive" src="assets/img/testimonials/ELI-testimonial03.jpg" alt="" />
 									</div>
 									<a class="btn-more hover-effect" href="#">read more +</a>
 								</div>
 								<div class="caption">
 									<h3><a class="hover-effect" href="#">Irma</a></h3>
-									<p>Some of my favorite memories from my time at ELI are the field trips we too.</p>
+									<p><i>"Some of my favorite memories from my time at ELI are the field trips we too."</i></p>
 								</div>
 							</div>
 						</div>
