--- a/graduate.html
+++ b/graduate.html
@@ -557,31 +557,13 @@ As per IIE open door report, close to 383,000 international students chose to st
 
 						<div class="owl-slider">
 							<div class="item">
-								<img class="img-responsive" src="assets/img/clients2/emirates.png" alt="">
+								<img class="img-responsive" src="assets/img/clients2/AACSB-International.png" alt="">
 						  </div>
 							<div class="item">
-								<img class="img-responsive" src="assets/img/clients2/marianos.png" alt="">
+								<img class="img-responsive" src="assets/img/clients2/The-Best-Masters-Degrees-Most-Affordable-285x300.png" alt="">
 							</div>
 							<div class="item">
-								<img class="img-responsive" src="assets/img/clients2/ucweb.png" alt="">
-							</div>
-							<div class="item">
-								<img class="img-responsive" src="assets/img/clients2/national-geographic.png" alt="">
-							</div>
-							<div class="item">
-								<img class="img-responsive" src="assets/img/clients2/much-more.png" alt="">
-							</div>
-							<div class="item">
-								<img class="img-responsive" src="assets/img/clients2/baderbrau.png" alt="">
-							</div>
-							<div class="item">
-								<img class="img-responsive" src="assets/img/clients2/co-wheels.png" alt="">
-							</div>
-							<div class="item">
-								<img class="img-responsive" src="assets/img/clients2/bellfield.png" alt="">
-							</div>
-							<div class="item">
-								<img class="img-responsive" src="assets/img/clients2/fddw.png" alt="">
+								<img class="img-responsive" src="assets/img/clients2/" alt="">
 							</div>
 					  </div>
 					</div>
