--- a/undergraduate.html
+++ b/undergraduate.html
@@ -555,8 +555,11 @@ Apply									</a>
 								<img class="img-responsive" src="assets/img/clients2/AACSB-International.png" alt="">
 						  </div>
 							<div class="item">
-								<img class="img-responsive" src="assets/img/clients2/CAC-RGB-W-L.jpg" alt="">
+								<img width="210px" src="assets/img/clients2/CAC-RGB-W-L.jpg" alt="">
 							</div>
+							<div class="item">
+								<img class="img-responsive" src="assets/img/clients2/AACSB-International.png" alt="">
+						  </div>
 					  </div>
 					</div>
 					<!-- End Owl Carousel v1 -->
