--- a/undergraduate.html
+++ b/undergraduate.html
@@ -527,14 +527,14 @@ Apply									</a>
 						<h2>Undergraduate Programs</h2></div>
 								<p>More than one million students from around the world choose to come to the United States for their higher education. Degrees earned at accredited institutions in the United States are recognized worldwide and prep5are you to be a global citizen.</p>
 								<img alt="" class="pull-left lft-img-margin img-width-200" src="assets/img/main/img22.jpg"><p>We at Jacksonville State University recognize the need for our students to be global citizens to compete in the real world once they graduate. We therefore celebrate diversity and welcome students from all around the world.</p>
-								<P>Take a look at our <a href="#profile-2" data-toggle="tab"> accreditation</a></p>
+								<p>Take a look at our <a href="#profile-2" data-toggle="tab"> accreditation</a></p>
 		  				</div>
 									
 									
 								<div class="tab-pane fade in" id="profile-2">
 								<div class="heading margin-bottom-10">
 							<h2>Accreditation</h2></div>		
-									<img alt="" class="pull-left lft-img-margin img-width-200" src="assets/img/main/img22.jpg">
+			  						<img class="col-sm-8 col-md-6 col-lg-6 img-responsive margin-bottom-20" src="assets/img/programs/ELI01.jpg" alt="">
 									<p>All of our academic programs are accredited. Some of our programs are accredited by worldwide accreditation bodies such as:
 									Our Computer Science and Information System is recognized by Computing Accreditation commission of ABET
 									Our school of business and industry is recognized by AACSB International 
@@ -549,7 +549,6 @@ Apply									</a>
 					  <div class="owl-navigation">
 						<div class="customNavigation"><a class="owl-btn prev-v1"><em class="fa fa-angle-left"></em></a> <a class="owl-btn next-v1"><em class="fa fa-angle-right"></em></a></div>
 					  </div><!--/navigation-->
-
 						<div class="owl-slider">
 							<div class="item">
 								<img class="img-responsive" src="assets/img/clients2/AACSB-International.png" alt="">
