update on pictures

--- a/undergraduate.html
+++ b/undergraduate.html
@@ -581,7 +581,7 @@ Apply									</a>
 			<div class="row">
 				<div class="col-md-4">
 					<div class="">
-						<img class="img-responsive" src="assets/img/main/img6.jpg" alt="" />
+						<img class="img-responsive" src="assets/img/main/Arts.jpg" alt="" />
 						<div class="">
 							<h2>Arts & Humanities</h2>
 							<p>add description here</p>
@@ -591,7 +591,7 @@ Apply									</a>
 				</div>
 				<div class="col-md-4">
 					<div class="">
-						<img class="img-responsive" src="assets/img/main/img5.jpg" alt="" />
+						<img class="img-responsive" src="assets/img/main/business.jpg" alt="" />
 						<div class="mask">
 							<h2>Business & Industry</h2>
 							<p>add description here</p>
@@ -601,7 +601,7 @@ Apply									</a>
 				</div>
 				<div class="col-md-4">
 					<div class="">
-						<img class="img-responsive" src="assets/img/main/img4.jpg" alt="" />
+						<img class="img-responsive" src="assets/img/main/Education.jpg" alt="" />
 						<div class="mask">
 							<h2>Education</h2>
 							<p>add description here</p>
