submit changes on text

--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@ Apply									</a>
 					</div>
 					<!-- End Owl Carousel v5 -->
 					<div class="col-sm-12 col-md-6 col-lg-6">
-						<h3>A window to the world</h3><br>
+						<h1>Become a Global Citizen</h1><br>
 						<p>We at Jacksonville State University recognize and appreciate the fact that International students like yourself add tremendous value to the campus experience that each student at JSU can have. We are
 						fortunate that we get to serve over 200 international students from Europe, Asia, North and South
 							America, Africa, and the Middle East, are enrolled here.</p><p>
@@ -570,10 +570,10 @@ become part of one big Gamecock Family once they come to JSU.
 							  <p>From the moment you step on the campus of Jacksonville State University you’ll discover that you are not the only one invested in your future.</p>
 							</div>
 							<ul class="list-unstyled lists-v2 margin-bottom-30">
-								<li><i class="fa fa-check"></i> Suspendisse eget augue non dolor ultrices</li>
-								<li><i class="fa fa-check"></i> Donec eget aliquet tortor, quis lacinia dolor</li>
-								<li><i class="fa fa-check"></i> Curabitur ut augue at mi eleifend lobortis</li>
-								<li><i class="fa fa-check"></i> Eleifend eget aliquet tortor, quis lacinia dolor</li>
+							  <li><i class="fa fa-check"></i> 8,693 students</li>
+							  <li><i class="fa fa-check"></i> Student Faculty ratio 18:1</li>
+								<li><i class="fa fa-check"></i> 2 hours from Atlanta, Georgia and 1.5 hours from Birmingham, Alabama</li>
+								<li><i class="fa fa-check"></i> University has accredited programs such as the Association to Advance Collegiate Schools of Businesss, International (AACSB)</li>
 							</ul>
 							<a class="btn-u btn-brd btn-brd-hover btn-u-dark" href="about.html">Learn More About JSU</a>
 						</div><!--/end row-->
