--- a/undergraduate.html
+++ b/undergraduate.html
@@ -614,7 +614,7 @@ Apply									</a>
 			<div class="row">
 				<div class="col-md-4">
 					<div class="">
-						<img class="img-responsive" src="assets/img/main/img3.jpg" alt="" />
+						<img class="img-responsive" src="assets/img/main/Science.jpg" alt="" />
 						<div class="mask">
 							<h2>Science</h2>
 							<p>add description here</p>
@@ -624,7 +624,7 @@ Apply									</a>
 				</div>
 				<div class="col-md-4">
 					<div class="">
-						<img class="img-responsive" src="assets/img/main/img2.jpg" alt="" />
+						<img class="img-responsive" src="assets/img/main/Human.jpg" alt="" />
 						<div class="mask">
 							<h2>Human Services & Social Sciences</h2>
 							<p>add description here</p>
@@ -634,7 +634,7 @@ Apply									</a>
 				</div>
 				<div class="col-md-4">
 					<div class="">
-						<img class="img-responsive" src="assets/img/main/img1.jpg" alt="" />
+						<img class="img-responsive" src="assets/img/main/Health.jpg" alt="" />
 						<div class="mask">
 							<h2>Health Professions & Wellness</h2>
 							<p>add description here</p>
@@ -820,7 +820,7 @@ Transferring at least 24 academic credit   hours from accredited US institutions
 									<p>Are you currently enrolled at another institution pursuing your Associate degree or bachelor’s degree program? Let us help you transition to JSU easily. 
 Students in Associate Degree Program: Congratulations for achieving one of the milestone in higher education if you are in a process to complete Associate degree. We are here to help you achieve a second milestone which will be your bachelor’s degree program.</p> 
 <p>Students in Bachelor’s Degree program: We are confident that JSU is the right institutions for you that fit your aspirations and resources. We are here to help you with the timely transfer credits process.</p>
-<p>International College Credit Transfer: In order to be have fair transfer credit hours process, we ask students to provide Evaluated transcripts from one of the credential evaluating companies listed on our webpage: http://www.jsu.edu/international/international-admissions/undergraduate.html We ask for “Course by Course Evaluation report” 
+<p>International College Credit Transfer: In order to be have fair transfer credit hours process, we ask students to provide Evaluated transcripts from one of the credential evaluating companies listed on our webpage: http://www.jsu.edu/international/international-admissions/undergraduate.html</P> <P>We ask for “Course by Course Evaluation report” 
 </p>
 								</div>
 		  <div class="tab-pane fade in" id="Important-Dates-2">
@@ -833,7 +833,17 @@ Students in Associate Degree Program: Congratulations for achieving one of the m
 								<div class="tab-pane fade in" id="ApplyNow-2">
 									<div class="heading margin-bottom-10">
 										<h2>Apply Now</h2></div>
-									<p>text here</p>
+									<p>Ready to become a Global Citizen. Please review carefull that you obtained all of these docuements ready to apply to JSU and review this checklilst</p>
+									<p><ol><li>Read Admissions Requirement (Click Here)</li>
+									<li>APPLY NOW (Click Here) and pay application fee online</li>
+									<li>Official High school transcripts/grade report in issuing institution’s sealed envelope</li>
+									<li>Official High school diploma/completion certificate in issuing institution’s sealed envelope</li>
+									<li>English translation of your academic credentials, Credentials must be translated by issuing institution’s itself or approved translation services.</li>
+									<li>Copy of Passport</li>
+									<li>Copy of bank letter or bank statement showing a balance of at least $30,500 (US dollar), Letter or statement should bear bank’s seal/stamp along with authorized signature and International Student Financial Statement (ISFS)</li>
+									<li>Proof of English proficiency test score, official test score must come directly from the testing center</li></ol> </p>
+									<p>To download the Undergraduate Cecklist for your personal documentation please donwload here</p>
+									<p>For more detail information about applying to JSU as an international student please review carefull extra information <a target="_blank" href="https://www.jsu.edu/international/">here</a></p>
 		  </div>
 				
 		</div>
