changes on text

--- a/undergraduate.html
+++ b/undergraduate.html
@@ -662,7 +662,7 @@ Apply									</a>
 								</div>
 		  <div class="tab-pane fade in" id="AfterGraduation-2">
 <div class="heading margin-bottom-10">
-		<h2>After ELI</h2></div>																		
+		<h2>After Graduation</h2></div>																		
 		  		<p>International Students under F-1 visa category can apply to work Under OPT (Optional Practical training) in the United States for 12 months after graduating from their degree program. Students in STEM field are eligible for 24 extra months to be employed in their field of study. JSU international alumni are employed by Fortune 100 companies.</p>
 			 	<p>International Students may want to consider pursuing a Graduate degree program. Having an advanced degree will/may give you an opportunity to negotiate a better career option and higher financial reward.Degree</p>
 		  </div>
@@ -820,7 +820,7 @@ Transferring at least 24 academic credit   hours from accredited US institutions
 									<p>Are you currently enrolled at another institution pursuing your Associate degree or bachelor’s degree program? Let us help you transition to JSU easily. 
 Students in Associate Degree Program: Congratulations for achieving one of the milestone in higher education if you are in a process to complete Associate degree. We are here to help you achieve a second milestone which will be your bachelor’s degree program.</p> 
 <p>Students in Bachelor’s Degree program: We are confident that JSU is the right institutions for you that fit your aspirations and resources. We are here to help you with the timely transfer credits process.</p>
-<p>International College Credit Transfer: In order to be have fair transfer credit hours process, we ask students to provide Evaluated transcripts from one of the credential evaluating companies listed on our webpage: http://www.jsu.edu/international/international-admissions/undergraduate.html</P> <P>We ask for “Course by Course Evaluation report” 
+<p>International College Credit Transfer: In order to be have fair transfer credit hours process, we ask students to provide Evaluated transcripts from one of the credential evaluating companies listed on our webpage: http://www.jsu.edu/international/international-admissions/undergraduate.html</p> <P>We ask for “Course by Course Evaluation report” 
 </p>
 								</div>
 		  <div class="tab-pane fade in" id="Important-Dates-2">
