--- a/undergraduate.html
+++ b/undergraduate.html
@@ -34,9 +34,7 @@
 	<link rel="stylesheet" href="assets/plugins/fancybox/source/jquery.fancybox.css">
 	<link rel="stylesheet" href="assets/plugins/animated-headline/css/animated-headline.css">
 
-	<!-- CSS Page Style -->
-	<link rel="stylesheet" href="assets/css/pages/portfolio-v1.css">
-	
+
 	<!-- CSS Theme -->
 	<link rel="stylesheet" href="assets/css/theme-colors/dark-red.css" id="style_color">
 	<link rel="stylesheet" href="assets/css/theme-skins/dark.css">
@@ -146,20 +144,20 @@
 													<div class="row">
 														<div class="col-sm-3 md-margin-bottom-30">
 															<div class="blog-grid">
-																<img class="img-responsive" src="assets/img/index-img/JSU ELI.jpg" alt="">
+																<a href="eli.html" target="_self"><img class="img-responsive" src="assets/img/index-img/JSU ELI.jpg" alt="JSU ELI Thumbnail"></a>
 																<h3 class="blog-grid-title-sm"><a href="eli.html">English Language Institute</a></h3>
 															</div>
 														</div>
 														<div class="col-sm-3 md-margin-bottom-30">
 															<div class="blog-grid">
-																<img class="img-responsive" src="assets/img/index-img/JSU International-House.jpg" alt="">
+																<a href="ihop.html" target="_self"><img class="img-responsive" src="assets/img/index-img/JSU International-House.jpg" alt="International House Thumbnail"></a>
 																<h3 class="blog-grid-title-sm"><a href="ihop.html">International House Program</a></h3>
 															</div>
 														</div>
 														<div class="col-sm-3 md-margin-bottom-30">
 															<div class="blog-grid">
-																<img class="img-responsive" src="assets/img/index-img/JSU Undergraduate.jpg" alt="">
-																<h3 class="blog-grid-title-sm"><a href="undergraduate.html">Undergraduate</a></h3>
+																<a href="undergraduate.html" target="_self"><img class="img-responsive" src="assets/img/index-img/JSU Undergraduate.jpg" alt="Undergraduate Thumbnail"></a>
+																<a href="graduate.html" target="_self"><h3 class="blog-grid-title-sm"><a href="undergraduate.html">Undergraduate</a></h3>
 															</div>
 														</div>
 														<div class="col-sm-3 sm-margin-bottom-30">
