changes on text

--- a/undergraduate.html
+++ b/undergraduate.html
@@ -614,7 +614,7 @@ Apply									</a>
 			<div class="row">
 				<div class="col-md-4">
 					<div class="">
-						<img class="img-responsive" src="assets/img/main/img3.jpg" alt="" />
+						<img class="img-responsive" src="assets/img/main/Science.jpg" alt="" />
 						<div class="mask">
 							<h2>Science</h2>
 							<p>add description here</p>
@@ -624,7 +624,7 @@ Apply									</a>
 				</div>
 				<div class="col-md-4">
 					<div class="">
-						<img class="img-responsive" src="assets/img/main/img2.jpg" alt="" />
+						<img class="img-responsive" src="assets/img/main/Human.jpg" alt="" />
 						<div class="mask">
 							<h2>Human Services & Social Sciences</h2>
 							<p>add description here</p>
@@ -634,7 +634,7 @@ Apply									</a>
 				</div>
 				<div class="col-md-4">
 					<div class="">
-						<img class="img-responsive" src="assets/img/main/img1.jpg" alt="" />
+						<img class="img-responsive" src="assets/img/main/Health.jpg" alt="" />
 						<div class="mask">
 							<h2>Health Professions & Wellness</h2>
 							<p>add description here</p>
